--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
+    "sass": "^1.32.8",
+    "trunx": "^0.38.2"
   },
   "scripts": {
     "lint-staged": "lint-staged",
