--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "lint-staged": "lint-staged",
+    "json-server": "json-server --watch db.json",
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
@@ -56,5 +57,8 @@
     "semi": false,
     "singleQuote": true,
     "trailingComma": "none"
+  },
+  "devDependencies": {
+    "json-server": "^0.16.3"
   }
 }
